--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^0.21.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
