--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "html-to-draftjs": "^1.5.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-modal": "^3.14.4",
