--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-jigsaw-puzzle": "^1.0.4",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
